--- a/shamo/pubspec.yaml
+++ b/shamo/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   carousel_slider: ^4.0.0
   provider: ^6.0.2
   http: ^0.13.4
+  firebase_core: ^1.12.0
+  cloud_firestore: ^3.1.9
 
 dev_dependencies:
   flutter_test:
